--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shack Donald's</title>
-</head>
-<body>
-  
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{ title }}</title>
+  </head>
+  <body class="container mx-auto p-4">
+    <header>
+      <div>Logo</div>
+      <nav>
+        <a>Меню</a>
+        <a>Мы на карте</a>
+        <a>Новинки и акции</a>
+        <a>Новости</a>
+        <a>О нас</a>
+      </nav>
+    </header>
+
+    <h1 class="text-2xl mb-4">Меню</h1>
+
+    <div>
+      <svg viewBox="0 0 41 32" xmlns="http://www.w3.org/2000/svg" class="w-10">
+        <g fill="none" fill-rule="evenodd" transform="translate(10.125 4)">
+          <ellipse
+            cx="10.375"
+            cy="23.091"
+            fill="#f1f1f1"
+            rx="10.375"
+            ry="1.03"
+          ></ellipse>
+          <path
+            d="M10.375 0C4.989 0 .625 4.211.625 9.405c0 6.51 7.501 13.747 9.75 13.747s9.75-7.236 9.75-13.747c0-5.194-4.364-9.405-9.75-9.405"
+            fill="#db0007"
+          ></path>
+          <path
+            d="M10.375 13.794c-2.513 0-4.55-1.965-4.55-4.389s2.037-4.389 4.55-4.389 4.55 1.965 4.55 4.39-2.037 4.388-4.55 4.388"
+            fill="#fff"
+          ></path>
+        </g>
+      </svg>
+      Приходи к нам
+    </div>
+
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
