--- a/index.html
+++ b/index.html
@@ -6,42 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }}</title>
   </head>
-  <body class="container mx-auto p-4">
-    <header>
-      <div>Logo</div>
-      <nav>
-        <a>Меню</a>
-        <a>Мы на карте</a>
-        <a>Новинки и акции</a>
-        <a>Новости</a>
-        <a>О нас</a>
-      </nav>
+  <body class="container mx-auto px-4 pb-10">
+    <header class="flex py-4">
+      <div class="shrink-0 mr-12">
+        <img
+          src="./src/assets/images/logo.png"
+          alt="logo"
+          class="h-16 lg:h-20"
+        />
+      </div>
+      <div class="flex flex-col justify-between py-2">
+        <div class="text-sm flex flex-wrap gap-x-6">
+          <a href="#" class="hover:text-slate-700"> Балыктах </a>
+          <a href="#" class="hover:text-slate-700"> Вход на сайт </a>
+        </div>
+        <nav class="text-lg flex flex-wrap gap-x-6">
+          <a href="#" class="font-bold">Меню</a>
+          <a href="#" class="hover:text-slate-700">Мы на карте</a>
+          <a href="#" class="hover:text-slate-700">Новинки и акции</a>
+          <a href="#" class="hover:text-slate-700">Новости</a>
+          <a href="#" class="hover:text-slate-700">О нас</a>
+        </nav>
+      </div>
     </header>
 
-    <h1 class="text-2xl mb-4">Меню</h1>
+    <h1 class="text-5xl font-bold mt-10">Меню</h1>
 
-    <div>
-      <svg viewBox="0 0 41 32" xmlns="http://www.w3.org/2000/svg" class="w-10">
-        <g fill="none" fill-rule="evenodd" transform="translate(10.125 4)">
-          <ellipse
-            cx="10.375"
-            cy="23.091"
-            fill="#f1f1f1"
-            rx="10.375"
-            ry="1.03"
-          ></ellipse>
-          <path
-            d="M10.375 0C4.989 0 .625 4.211.625 9.405c0 6.51 7.501 13.747 9.75 13.747s9.75-7.236 9.75-13.747c0-5.194-4.364-9.405-9.75-9.405"
-            fill="#db0007"
-          ></path>
-          <path
-            d="M10.375 13.794c-2.513 0-4.55-1.965-4.55-4.389s2.037-4.389 4.55-4.389 4.55 1.965 4.55 4.39-2.037 4.388-4.55 4.388"
-            fill="#fff"
-          ></path>
-        </g>
-      </svg>
-      Приходи к нам
-    </div>
+    <section class="mt-6">
+      <div
+        class="inline-flex items-center space-x-1 rounded-3xl shadow-lg py-1 px-3"
+      >
+        <img
+          src="./src/assets/images/location-pin.svg"
+          alt="pin"
+          class="w-10"
+        />
+        <span class="text-2xl font-bold">Приходи к нам</span>
+      </div>
+    </section>
+
+    <section class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 mt-6">
+      <div class="shadow-lg rounded-xl p-5">
+        <div class="relative w-full h-[240px]">
+          <div
+            class="absolute top-4 left-0 text-xs font-medium uppercase text-white bg-[#833895] rounded-sm py-px px-2"
+          >
+            Популярно
+          </div>
+          <img
+            src="./src/assets/images/двойной-чизбургер.png"
+            alt="Двойной Чизбургер"
+            class="h-full object-cover mx-auto"
+          />
+        </div>
+        <div class="text-center my-4">Двойной Чизбургер</div>
+        <div class="font-bold">от 129 ₽</div>
+      </div>
+
+      <div class="shadow-lg rounded-xl p-5">
+        <div class="relative w-full h-[240px]">
+          <div
+            class="absolute top-4 left-0 text-xs font-medium uppercase text-white bg-[#833895] rounded-sm py-px px-2"
+          >
+            Популярно
+          </div>
+          <img
+            src="./src/assets/images/чикен-премьер.png"
+            alt="Чикен Премьер"
+            class="h-full object-cover mx-auto"
+          />
+        </div>
+        <div class="text-center my-4">Чикен Премьер</div>
+        <div class="font-bold">от 149 ₽</div>
+      </div>
+
+      <div class="shadow-lg rounded-xl p-5">
+        <div class="relative w-full h-[240px]">
+          <div
+            class="absolute top-4 left-0 text-xs font-medium uppercase text-white bg-[#833895] rounded-sm py-px px-2"
+          >
+            Популярно
+          </div>
+          <img
+            src="./src/assets/images/наггетсы.png"
+            alt="Наггетсы (6 шт.)"
+            class="h-full object-cover mx-auto"
+          />
+        </div>
+        <div class="text-center my-4">Наггетсы (6 шт.)</div>
+        <div class="leading-none text-xs">6 шт.</div>
+        <div class="font-bold">от 69 ₽</div>
+      </div>
+
+      <div class="shadow-lg rounded-xl p-5">
+        <div class="relative w-full h-[240px]">
+          <div
+            class="absolute top-4 left-0 text-xs font-medium uppercase text-white bg-[#833895] rounded-sm py-px px-2"
+          >
+            Популярно
+          </div>
+          <img
+            src="./src/assets/images/пирожок.png"
+            alt="Пирожок Вишневый"
+            class="h-full object-cover mx-auto"
+          />
+        </div>
+        <div class="text-center my-4">Пирожок Вишневый</div>
+        <div class="font-bold">от 59 ₽</div>
+      </div>
+    </section>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
