--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
   <body class="container mx-auto px-4 pb-10">
     <header class="flex py-4">
       <div class="shrink-0 mr-12">
-        <img
-          src="./src/assets/images/logo.png"
-          alt="logo"
-          class="h-16 lg:h-20"
-        />
+        <a href="/">
+          <img
+            src="/src/assets/images/logo.png"
+            alt="logo"
+            class="h-16 lg:h-20"
+          />
+        </a>
       </div>
       <div class="flex flex-col justify-between py-2">
         <div class="text-sm flex flex-wrap gap-x-6">
-          <a href="#" class="hover:text-slate-700"> Балыктах </a>
+          <a href="#" class="hover:text-slate-700"> Москва </a>
           <a href="#" class="hover:text-slate-700"> Вход на сайт </a>
         </div>
         <nav class="text-lg flex flex-wrap gap-x-6">
-          <a href="#" class="font-bold">Меню</a>
-          <a href="#" class="hover:text-slate-700">Мы на карте</a>
+          <a href="/" class="font-bold">Меню</a>
+          <!-- <a href="#" class="hover:text-slate-700">Мы на карте</a>
           <a href="#" class="hover:text-slate-700">Новинки и акции</a>
-          <a href="#" class="hover:text-slate-700">Новости</a>
-          <a href="#" class="hover:text-slate-700">О нас</a>
+          <a href="#" class="hover:text-slate-700">Новости</a> -->
+          <a href="/about/" class="hover:text-slate-700">О нас</a>
         </nav>
       </div>
     </header>
@@ -36,11 +38,7 @@
       <div
         class="inline-flex items-center space-x-1 rounded-3xl shadow-lg py-1 px-3"
       >
-        <img
-          src="./src/assets/images/location-pin.svg"
-          alt="pin"
-          class="w-10"
-        />
+        <img src="/src/assets/images/location-pin.svg" alt="pin" class="w-10" />
         <span class="text-2xl font-bold">Приходи к нам</span>
       </div>
     </section>
@@ -54,7 +52,7 @@
             Популярно
           </div>
           <img
-            src="./src/assets/images/двойной-чизбургер.png"
+            src="/src/assets/images/двойной-чизбургер.png"
             alt="Двойной Чизбургер"
             class="h-full object-cover mx-auto"
           />
@@ -71,7 +69,7 @@
             Популярно
           </div>
           <img
-            src="./src/assets/images/чикен-премьер.png"
+            src="/src/assets/images/чикен-премьер.png"
             alt="Чикен Премьер"
             class="h-full object-cover mx-auto"
           />
@@ -88,7 +86,7 @@
             Популярно
           </div>
           <img
-            src="./src/assets/images/наггетсы.png"
+            src="/src/assets/images/наггетсы.png"
             alt="Наггетсы (6 шт.)"
             class="h-full object-cover mx-auto"
           />
@@ -106,7 +104,7 @@
             Популярно
           </div>
           <img
-            src="./src/assets/images/пирожок.png"
+            src="/src/assets/images/пирожок.png"
             alt="Пирожок Вишневый"
             class="h-full object-cover mx-auto"
           />
