--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
           style="max-width: 420px"
         />
       </div>
-      <div class="text-2xl mt-5">Арылхан</div>
+      <div class="text-2xl mt-5">Арылхан Собакин</div>
       <div>Генеральный директор</div>
     </section>
 
