--- a/about/index.html
+++ b/about/index.html
@@ -47,6 +47,19 @@
       <div>Генеральный директор</div>
     </section>
 
+    <section class="mt-6">
+      <div>
+        <img
+          src="/src/assets/images/IMG_0866.PNG"
+          alt=""
+          class="w-full"
+          style="max-width: 420px"
+        />
+      </div>
+      <div class="text-2xl mt-5">Степан Сотников</div>
+      <div>Программист</div>
+    </section>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
